# AntiSplodge

./: AntiSplodge_10fold_cross_validation.ipynb  AntiSplodge_minimal_example.ipynb  LICENSE  README.md  marker_genes.csv  requirements.txt  setup.cfg  setup.py
antisplodge/: antisplodge.py
antisplodge/AntiSplodge.egg-info/: PKG-INFO  SOURCES.txt
docs/source/: antisplodge.rst  conf.py  index.rst  modules.rst
src/AntiSplodge/: __init__.py  antisplodge.py
src/antisplodge/: __init__.py  antisplodge.py
