[metadata]
# replace with your username:
name = antisplodge
version = 0.1.5
author = Jesper Beltoft Lund
author_email = Jesper.Lund@hpi.de
description = AntiSplodge: A neural network-based spatial transcriptomics deconvolution pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HealthML/AntiSplodge
project_urls =
    Bug Tracker = https://github.com/HealthML/AntiSplodge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = antisplodge
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
